--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   hexcolor: ^3.0.1
   font_awesome_flutter: ^10.5.0
   otp_text_field: ^1.1.3
+  geolocator: ^10.0.1
+  permission_handler: ^11.0.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
