--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^10.0.1
   permission_handler: ^11.0.0
   http: ^1.1.0
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
