--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   geocoding: ^2.1.0
   carousel_slider: ^4.2.1
   smooth_page_indicator: ^1.1.0
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
 
 dev_dependencies:
   flutter_test:
