--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_test:
