--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_auth: ^4.10.1
   flutter_spinkit: ^5.2.0
   google_sign_in: ^6.1.5
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
