--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   google_sign_in: ^6.1.5
   shared_preferences: ^2.2.2
+  scrollable_positioned_list: ^0.3.8
 
 dev_dependencies:
   flutter_test:
